...
  Widget build(IMainTabsWidgetModel wm) {
    return Scaffold(
      body: TabBarView(
        controller: wm.tabController,
        physics: const NeverScrollableScrollPhysics(),
        children: const [
          PlacesListScreen(key: ValueKey('PlacesListScreen')),
          FavoriteScreen(),
          SettingsScreen(),
        ],
      ),
      bottomNavigationBar: StateNotifierBuilder<int>(
        listenableState: wm.indexState,
...
